v1.0.0 (Sunday, 23 June 2013) :
 - initial version
 
v1.0.1 (Saturday, 7 July 2013) :
- added beautiful soup as dependency