@@ -16,7 +16,10 @@
 	<platform>all</platform>
 	<summary lang="en">Watch tech videos from Tweakers.net (dutch)</summary>
 	<description lang="en">Watch tech videos from Tweakers.net (dutch)</description>
-	<disclaimer lang="en">For bugs, requests or general questions visit the tweakers thread on the XBMC forum.</disclaimer>
+	<disclaimer lang="en">For bugs, requests or general questions visit the tweakers.net thread on the XBMC forum.</disclaimer>
+	<summary lang="nl">Bekijk technologie videos van Tweakers.net (dutch)</summary>
+	<description lang="nl">Bekijk technologie videos van Tweakers.net (dutch)</description>
+	<disclaimer lang="nl">Bugs of andere feedback op deze plugin kan geplaatst worden in de Tweakers.net thread op het XBMC forum.</disclaimer>
     <language>nl</language>
     <platform>all</platform>
     <license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
